# nameless_chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md  build.ps1  build_cpp_via_cmake.ps1  build_java_via_maven.ps1  build_vpp_via_cmake.ps1  clean.ps1  clean_cpp_build.ps1  clean_java_build.ps1  pom.xml
c_src/: Chess_Board.cpp  Chess_Board.h  Main.h  game.cpp  game.h  message.h  test_main.cpp
j_src/: Main.java
resources/: board.fxml  style.css
src/: Chess_Board.cpp  Chess_Board.h  dep.h  exception.h  game.cpp  game.h  matrix.h  message.h
src/cppsrc/: message.h
src/main/cpp/: CmakeLists.txt  api.cpp  game.cpp  game.h  message.h  online_ruin_of_future_nameless_chess_CppSync.h  test_main.cpp
src/main/java/: module-info.java
src/main/java/online/ruin_of_future/nameless_chess/: BoardPanel.java  CppSync.java  IdlePanel.java  Play.java  StartPanel.java  View.java
src/main/resources/online/ruin_of_future/nameless_chess/: board.fxml  style.css
src/online/ruin_of_future/nameless_chess/: Battle.java  Board.java  BoardPanel.java  Console.java  Graph.java  Matrix.java  Play.java  StartPanel.java  View.java  __Piece.java  __Player.java  main.java
